# llm-paper-digest

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
digest_job/: Dockerfile  cloudbuild.yaml  main.py  pyproject.toml  test_main.py
infrastructure/: digest_job.tf  digest_scheduler.tf  firestore.tf  main.tf  profile_job.tf  profile_regen_queue.tf  providers.tf  secrets.tf  variables.tf  webhook_service.tf
job/: main.py
profile_generation_job/: cloudbuild.yaml  main.py  pyproject.toml  test_main.py
webhook_service/: Dockerfile  cloudbuild.yaml  go.mod  go.sum  webhook.go
