[project]
name = "llm-paper-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86.0",
    "google-cloud-firestore>=2.27.0",
    "pydantic>=2.12.5",
    "pypdf>=6.10.2",
    "requests>=2.32.5",
    "xmltodict>=1.0.4",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
]
